--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,19 @@
     <string name="app_name">testsms</string>
 
     <string-array name="categories_default">
+        <item>Долг</item>
         <item>Еда</item>
+        <item>Одежда</item>
+        <item>Дом</item>
+        <item>Быт</item>
         <item>Транспорт</item>
-        <item>Развлечения</item>
+        <item>Подарки</item>
         <item>Другое</item>
     </string-array>
 
     <string-array name="categories_income">
         <item>Зарплата</item>
+        <item>Аванс</item>
         <item>Подарок</item>
         <item>Возврат</item>
         <item>Другое</item>
@@ -25,4 +30,21 @@
         <item>Карта</item>
         <item>Наличка</item>
     </string-array>
+
+    <string-array name="currency_array">
+        <item>BYN</item>
+        <item>USD</item>
+        <item>EUR</item>
+        <item>RUB</item>
+    </string-array>
+
+
+    <style name="BottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+    </style>
+
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
 </resources>
